<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5383A0"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <include
            android:id="@+id/layout_shop_features"
            layout="@layout/layout_features"/>

    </LinearLayout>




    <RelativeLayout
        android:id="@+id/layer_card_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="#E67102"
            android:elevation="4dp"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_home_play"
                    style="@style/QuizHomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/play"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_history"
                    style="@style/QuizHomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/history"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_shop"
                    style="@style/QuizHomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/shop"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_settings_play"
                    style="@style/QuizHomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/settings"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_about"
                    style="@style/QuizHomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/about" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_quit"
                    style="@style/QuizHomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/quit" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>