<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".activity.SettingActivity">

    <RelativeLayout
        android:background="@color/primary"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_to_back"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/quizPlayTitle"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/title_on_dark"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ScrollView
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingBottom="50dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <RelativeLayout

                android:background="@drawable/primary_15px"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatButton
                    android:text="@string/sound"
                    android:drawablePadding="5dp"
                    android:textAllCaps="false"
                    android:textSize="@dimen/aboutButton"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:drawableStart="@drawable/baseline_volume_up_24"
                    android:textColor="@color/title_on_dark"
                    android:background="@color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <androidx.appcompat.widget.SwitchCompat
                    android:layout_alignParentEnd="true"
                    android:id="@+id/switch_btn_audio"
                    android:layout_width="wrap_content"
                    app:trackTint="@color/primary_variant"
                    app:thumbTint="@color/white"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clickContactID"
                android:text="@string/contact_us"
                android:drawablePadding="5dp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/aboutButton"
                android:paddingHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="viewStart"
                android:drawableEnd="@drawable/baseline_chevron_right_24"
                android:drawableStart="@drawable/ic_baseline_contact_page_24"
                android:textColor="@color/title_on_dark"
                android:background="@drawable/primary_15px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clickAboutID"
                android:text="@string/about_us"
                android:textAllCaps="false"
                android:drawablePadding="5dp"
                android:paddingHorizontal="15dp"
                android:textSize="@dimen/aboutButton"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_regular"
                android:textAlignment="viewStart"
                android:drawableEnd="@drawable/baseline_chevron_right_24"
                android:drawableStart="@drawable/about_us_white"
                android:textColor="@color/title_on_dark"
                android:background="@drawable/primary_15px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clickPrivacyID"
                android:text="@string/privacy_policy"
                android:drawablePadding="5dp"
                android:textAllCaps="false"
                android:paddingHorizontal="15dp"
                android:textSize="@dimen/aboutButton"
                android:layout_marginBottom="10dp"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins_regular"
                android:drawableEnd="@drawable/baseline_chevron_right_24"
                android:drawableStart="@drawable/privacy_tip_white"
                android:textColor="@color/title_on_dark"
                android:background="@drawable/primary_15px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clickTermConditionID"
                android:text="@string/term_amp_conditions"
                android:drawablePadding="5dp"
                android:paddingHorizontal="15dp"
                android:textAllCaps="false"
                android:textSize="@dimen/aboutButton"
                android:layout_marginBottom="10dp"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins_regular"
                android:drawableEnd="@drawable/baseline_chevron_right_24"
                android:drawableStart="@drawable/privacy_tip_white"
                android:textColor="@color/title_on_dark"
                android:background="@drawable/primary_15px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clickRateID"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:drawablePadding="5dp"
                android:textSize="@dimen/aboutButton"
                android:paddingHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_regular"
                android:textAlignment="viewStart"
                android:drawableStart="@drawable/star_rate_24_white"
                android:textColor="@color/title_on_dark"
                android:background="@drawable/primary_15px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clickShareID"
                android:textAllCaps="false"
                android:text="@string/share_app"
                android:drawablePadding="5dp"
                android:textSize="@dimen/aboutButton"
                android:paddingHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins_regular"
                android:drawableStart="@drawable/share_white"
                android:textColor="@color/title_on_dark"
                android:background="@drawable/primary_15px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>