<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/btn_recycler"
    android:background="@drawable/primary_15px"
    android:layout_marginBottom="15dp"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/exception_handler"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/complete_previous_category"
        android:textColor="@color/title_on_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"/>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layer_lock"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_lock_24"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layer_unlock"
        android:visibility="visible"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <TextView
            android:textColor="@color/white"
            android:text="@string/level"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtLevel"
            android:textColor="@color/white"
            android:text="2/10"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>