<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5383A0"
    android:layout_centerInParent="true"
    tools:context=".activity.LevelSelectionActivity">


    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layer_card_main_menu"
            android:layout_gravity="center"
            android:background="@drawable/gp_bg"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="390dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginTop="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="60dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_level_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/kalam_bold"
                        android:text="@string/java_quiz_game"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_easy_mode"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/home_btn_bg"
                        android:elevation="0dp"
                        android:fontFamily="@font/kalam_bold"
                        android:text="@string/easy"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_medium_mode"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/home_btn_bg"
                        android:elevation="0dp"
                        android:fontFamily="@font/kalam_bold"
                        android:text="@string/medium"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_hard_mode"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/home_btn_bg"
                        android:elevation="0dp"
                        android:fontFamily="@font/kalam_bold"
                        android:text="@string/hard"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layer_action_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:clickable="true"
                android:id="@+id/layer_close_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/polygon_bg"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_close_24" />
            </LinearLayout>



            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:clickable="true"
                android:id="@+id/layer_help_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/polygon_bg"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_help_24" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:clickable="true"
                android:id="@+id/layer_sound_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/polygon_bg"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/baseline_volume_up_24" />
            </LinearLayout>


            </LinearLayout>


    </LinearLayout>


</RelativeLayout>