<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_quiz_history_item_ID"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:background="@color/newSecond"
        android:id="@+id/linear_layout_quiz_history_item_ID"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/txt_category_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/quizHistoryTitle"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="end"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/coin_coin"
                        android:layout_width="33dp"
                        android:layout_height="33dp"/>

                    <TextView
                        android:id="@+id/txt_coin_reward_get"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="center"
                        android:text="10"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/timer_icon"
                    android:src="@drawable/round_timer_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/txt_time_taken"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="00:40" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_wrong_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/txt_skipped_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
